objects/TracHier__Bridge__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Child_Type__c</fullName>
        <label>Child Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Clause__c</fullName>
        <label>Clause</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Criteria_Logic__c</fullName>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Interval_Date_Field__c</fullName>
        <label>Interval Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Interval_Number__c</fullName>
        <label>Interval Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Interval__c</fullName>
        <label>Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Lookup__c</fullName>
        <label>Lookup</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Parent_Type__c</fullName>
        <label>Parent Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bridge</label>
    <nameField>
        <label>Bridge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>